# ptt-audio-menu

./: AGENTS.md  Cargo.toml  DESIGN.md  EXECUTION.md  GOAL.md  PLAN.md  PROMPT.md  README.md  STATUS.md  flake.nix
docs/: nix-modules.md
examples/: config.handy.toml  config.personal-workflow.toml  config.validation.toml  daily_log_render.py
nix/: home-manager-module.nix  nixos-module.nix  package.nix
src/: actions.rs  audio.rs  commands.rs  config.rs  input.rs  main.rs  menu.rs  packets.rs  parser.rs  recorder.rs  transport.rs  tts.rs
