[package]
name = "ptt-audio-menu"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1"
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
futures = "0.3"
kira = { version = "0.12.1", default-features = false, features = ["cpal", "wav"] }
libc = "0.2"
piper-rs = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
uuid = "1"

[dev-dependencies]
tempfile = "3"
