[package]
name = "ptt-audio-menu"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1"
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
futures = "0.3"
kira = { version = "0.12.1", default-features = false, features = ["cpal", "wav", "pcm"] }
libc = "0.2"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "pkg-config", "api-24"] }
piper-rs = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1"

[dev-dependencies]
tempfile = "3"
