[package]
name = "ptt-audio-menu"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cpal = "0.17.3"
directories = "5"
futures = "0.3"
hound = "3.5"
kira = { version = "0.12.1", default-features = false, features = ["cpal", "wav", "pcm"] }
libc = "0.2"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "pkg-config", "api-24"] }
parakeet-rs = { version = "0.3.6", default-features = false, features = ["cpu"] }
piper-rs = { version = "0.2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1"

# Linux: BlueZ RFCOMM transport via the bluer crate.
[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }

# macOS: serial-port file transport (e.g. /dev/cu.<device-name>-SPPDev)
# created automatically when a paired Bluetooth Classic device exposes an
# SPP service. The user must pair the device in System Settings -> Bluetooth
# once; no programmatic profile registration is performed.
[target.'cfg(target_os = "macos")'.dependencies]
tokio-serial = { version = "5.4.0", default-features = false }

[dev-dependencies]
tempfile = "3"
